apps/bsis-app/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bsis-app
spec:
  tls:
    - hosts:
        - app.example.com
      secretName: bsis-app-production-tls
  rules:
    - host: app.example.com
